Code cleanup and getting the examples to run.
The examples do not necessarily produce something helpful at this point.